# itshouldwork

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: Dockerfile  package.json
backend/prisma/: schema.prisma
backend/src/: index.ts  server.ts
backend/src/config/: env.ts
backend/src/data/: catalog.ts
backend/src/lib/: auth.ts  prisma.ts
backend/src/routes/: auth.ts  movies.ts  ratings.ts  recommendations.ts  search.ts  users.ts  watchlist.ts
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
services/ml-service/: Dockerfile  pyproject.toml
services/ml-service/app/: main.py
