[project]
name = "nova-recs-ml-service"
version = "0.1.0"
description = "Hybrid recommendation microservice"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "pydantic>=2.8.0"
]

[tool.uvicorn]
factory = false